# mediastack-python-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: news_fetcher.py
tests/: test_news_fetcher.py  test_news_fetcher_integration.py
